# arc-agi3

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: aria-lite-orchestrator.md
.claude/agents/: arc-agi-evaluator.md  aria-lite-orchestrator.md  experiment-manager.md  git-manager.md  multimodal-action-architect.md  neuro-creative-ideator.md  python-ml-architect.md  rl-training-expert.md
docs/: ARC-AGI-3-OVERVIEW.md  ARIA-LITE-IMPLEMENTATION.md  ARIA-LITE-PROGRESS.md  ARIA-LITE-TRAINING.md  ARIA-VARIANTS.md  BUILDING-AGENTS.md  HYBRID-ARCHITECTURE.md  NEUROSYMBOLIC-V2-ARCHITECTURE.md  PROGRESS-GUIDE.md  PROGRESS.md  README.md  SOLUTION-PROPOSALS.md  TECHNICAL-REPORT.md
docs/archive/: ABSTRACT-LEARNING.md  ARC-DREAMER-V2.md  SOLUTION-PROPOSALS.md
docs/current/: ARCHITECTURE.md  DESIGN-DOC-V2.md  IMPLEMENTATION-PLAN.md  V4-ARCHITECTURE.md
docs/findings/: ARIA-V1-REPORT.md  V1-WORLD-MODEL-ANALYSIS.md  V3-POSTMORTEM.md  V4-ABLATION-STUDY.md
docs/progress/: arc-agi3-exploration.md  training-validation.md
docs/reference/: API-GUIDE.md  COMPETITION-RULES.md  GAME-MECHANICS.md
examples/: arc_dreamer_demo.py  basic_agent.py  random_agent.py
experiments/aria_v1/: README.md
src/arc_dreamer_v2/: __init__.py  agent.py  belief_tracking.py  goal_discovery.py  hierarchy.py  intrinsic_motivation.py  planning.py  symbolic_grounding.py  world_model.py
src/arc_neurosymbolic_v2/: __init__.py
src/aria/: __init__.py  config.py  perception.py  policy.py  types.py
src/aria_lite/: __init__.py  arbiter.py  config.py  demo_collector.py  encoder.py  encoder_simple.py  eval_aria_integrated.py  fast_policy.py  jsonl_demo_loader.py  llm.py  slow_policy.py  test_arc_agi.py  train_arc_fewshot.py  train_arc_simple.py  train_aria_bc.py  (+15 more)
(+150 files in other folders)
